openxavatest pom.xml adapted to work with Lombok for both Java 17 and 25